SusiMail:    - CSS padding in inputs    - Flush writes in SMTP    - Don't wait for SMTP response after QUIT    - Translate the "login failed" message    - Show "no messages" in folder view if none    - Message view attachment cleanups    - Fix the message view layout in CSS    - Pipeline USER and PASS to save a round-trip at startup    - Better synchronization in POP3    - Properly de-byte-stuff in POP3    - Flush writes in POP3 for speedup    - Remove unnecessary caching in POP3, this is handled in MailCache    - More efficient handling of POP3 server responses    - Remove 60s timeout for fetching a message,      so retrieval of large messages doesn't fail    - Don't allow line breaks in date/time or size in folder view    - Use DataHelper.formatSize2() for message size    - Identify susimail log messages in wrapper    - Debug log tweaks

--- a/installer/resources/themes/susimail/light/susimail.css
+++ b/installer/resources/themes/susimail/light/susimail.css
@@ -75,9 +75,11 @@ p.mailbody {
      display: none;
 }
 
+/*
 .mailbody {
      display: block !important;
 }
+*/
 
 a {
      color:#327BBF;
@@ -220,4 +222,8 @@ input.send, input.setpagesize {
      background: #ddf url('/themes/console/images/accept.png') no-repeat 4px center;
      padding: 2px 3px 2px 24px;
      min-height: 22px;
+}
+
+input[type=text], input[type=password] {
+     padding: 1px 4px;
 }
